objects/Partner_Contact_Oppty_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Formula field which copies the address information for Partner Contact</description>
        <formula>Partner_Contact__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Formula field which copies the city information for the Partner Contact</description>
        <formula>Partner_Contact__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Formula field which copies the Country information for the Partner Contact</description>
        <formula>Partner_Contact__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Formula field which copies the email information about the Partner Contact</description>
        <formula>Partner_Contact__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Creates a Master-detail relationship between the Opportunity and Partner Contact. Stores the opportunity related to the partner contact.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartnerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account object for storing the Account related to the Partner Contact</description>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the related Partner Contact Record information for the mapping object.</description>
        <label>Partner Contact Record</label>
        <referenceTo>Partner_Contact__c</referenceTo>
        <relationshipLabel>Partner Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Formula field which copies the Partner name for the Partner Contact</description>
        <formula>Partner_Contact__r.Partner_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Formula field which copies the phone information for the Partner Contact</description>
        <formula>Partner_Contact__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Formula field which copies the title information for the Partner Contact</description>
        <formula>Partner_Contact__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <description>Used to map partner contacts to Opportunities and used as a Oppty related list</description>
    <label>Partner Contact</label>
    <nameField>
        <label>Partner Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>